--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+/firmware/*
+!/firmware/.gitkeep
+/prisma/contactless.db
+/server.cert
