--- a/package.json
+++ b/package.json
@@ -3,13 +3,52 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js",
+    "setup": "prisma migrate up --experimental -c",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "next": "9.3.5",
+    "@ant-design/icons": "^4.1.0",
+    "@prisma/client": "^2.0.0-beta.5",
+    "@slack/web-api": "^5.8.0",
+    "@types/cookie": "^0.4.0",
+    "@types/crc": "^3.4.0",
+    "@types/emoji-mart": "^2.11.3",
+    "@types/fs-extra": "^9.0.1",
+    "@types/lodash.memoize": "^4.1.6",
+    "@types/react-beautiful-dnd": "^12.1.2",
+    "@types/react-resize-detector": "^4.2.0",
+    "@types/react-window": "^1.8.2",
+    "@types/uuid": "^7.0.3",
+    "@types/zipcelx": "^1.5.0",
+    "antd": "^4.2.2",
+    "cookie": "^0.4.1",
+    "crc": "^3.8.0",
+    "emoji-mart": "^3.0.0",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.0",
+    "lodash.memoize": "^4.1.2",
+    "moment": "^2.24.0",
+    "next": "^9.4.0",
+    "next-absolute-url": "^1.2.2",
+    "rc-resize-observer": "^0.2.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-beautiful-dnd": "^13.0.0",
+    "react-dom": "16.13.1",
+    "react-resize-detector": "^4.2.3",
+    "react-window": "^1.8.5",
+    "recoil": "^0.0.7",
+    "uuid": "^8.0.0",
+    "zipcelx": "^1.6.2"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.0.0-beta.5",
+    "@types/node": "^13.13.2",
+    "@types/react": "^16.9.34",
+    "prettier": "^2.0.5",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.8.3"
   }
 }
