--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "setup": "prisma migrate up --experimental -c",
-    "postinstall": "prisma generate"
+    "proto": "rm proto/index.js proto/index.d.ts && yarn pbjs -t static-module -w commonjs -o proto/index.js proto/* --es6 && yarn pbts -o proto/index.d.ts proto/index.js",
+    "postinstall": "prisma generate && yarn proto"
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
@@ -21,6 +22,7 @@
     "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-window": "^1.8.2",
+    "@types/recoil": "^0.0.0",
     "@types/uuid": "^7.0.3",
     "@types/zipcelx": "^1.5.0",
     "antd": "^4.2.2",
@@ -33,13 +35,14 @@
     "moment": "^2.24.0",
     "next": "^9.4.0",
     "next-absolute-url": "^1.2.2",
+    "protobufjs": "^6.9.0",
     "rc-resize-observer": "^0.2.1",
     "react": "16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
     "react-resize-detector": "^4.2.3",
     "react-window": "^1.8.5",
-    "recoil": "^0.0.7",
+    "recoil": "0.0.7",
     "uuid": "^8.0.0",
     "zipcelx": "^1.6.2"
   },
