--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "postinstall": "prisma generate && yarn proto"
   },
   "dependencies": {
+    "@ant-design/charts": "^0.9.6",
     "@ant-design/icons": "^4.1.0",
-    "@prisma/client": "^2.0.0-beta.5",
+    "@prisma/client": "^2.1.3",
     "@slack/web-api": "^5.8.0",
     "@types/cookie": "^0.4.0",
     "@types/crc": "^3.4.0",
@@ -22,10 +23,10 @@
     "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-window": "^1.8.2",
-    "@types/recoil": "^0.0.0",
+    "@types/recoil": "^0.0.1",
     "@types/uuid": "^7.0.3",
     "@types/zipcelx": "^1.5.0",
-    "antd": "^4.2.2",
+    "antd": "^4.4.0",
     "cookie": "^0.4.1",
     "crc": "^3.8.0",
     "emoji-mart": "^3.0.0",
@@ -33,7 +34,7 @@
     "fs-extra": "^9.0.0",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.24.0",
-    "next": "^9.4.0",
+    "next": "^9.4.4",
     "next-absolute-url": "^1.2.2",
     "protobufjs": "^6.9.0",
     "rc-resize-observer": "^0.2.1",
@@ -42,12 +43,12 @@
     "react-dom": "16.13.1",
     "react-resize-detector": "^4.2.3",
     "react-window": "^1.8.5",
-    "recoil": "0.0.7",
+    "recoil": "^0.0.10",
     "uuid": "^8.0.0",
     "zipcelx": "^1.6.2"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.0.0-beta.5",
+    "@prisma/cli": "^2.1.3",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "prettier": "^2.0.5",
