--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@prisma/cli": "^2.1.3",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
+    "commander": "^5.1.0",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
