--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "setup": "prisma migrate up --experimental -c",
+    "setup": "prisma migrate up --experimental --create-db",
     "proto": "rm -f proto/index.js proto/index.d.ts && yarn pbjs -t static-module -w commonjs -o proto/index.js proto/* --es6 && yarn pbts -o proto/index.d.ts proto/index.js",
     "postinstall": "prisma generate && yarn proto"
   },
   "dependencies": {
     "@ant-design/charts": "^0.9.6",
     "@ant-design/icons": "^4.1.0",
-    "@prisma/client": "^2.1.3",
+    "@prisma/client": "^2.2.0",
     "@slack/web-api": "^5.8.0",
     "@types/cookie": "^0.4.0",
     "@types/crc": "^3.4.0",
@@ -41,19 +41,18 @@
     "react": "16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
-    "react-resize-detector": "^4.2.3",
+    "react-resize-detector": "^5.0.6",
     "react-window": "^1.8.5",
     "recoil": "^0.0.10",
     "uuid": "^8.0.0",
     "zipcelx": "^1.6.2"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.1.3",
+    "@prisma/cli": "^2.2.0",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "commander": "^5.1.0",
     "prettier": "^2.0.5",
-    "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   }
 }
