--- a/package.json
+++ b/package.json
@@ -13,27 +13,18 @@
   "dependencies": {
     "@ant-design/charts": "^0.9.10",
     "@ant-design/icons": "^4.2.2",
-    "@prisma/client": "^2.4.1",
+    "@prisma/client": "^2.5.1",
     "@slack/web-api": "^5.8.0",
-    "@types/cookie": "^0.4.0",
-    "@types/crc": "^3.4.0",
-    "@types/emoji-mart": "^2.11.3",
-    "@types/lodash.memoize": "^4.1.6",
-    "@types/react-beautiful-dnd": "^12.1.2",
-    "@types/react-resize-detector": "^4.2.0",
-    "@types/react-window": "^1.8.2",
-    "@types/recoil": "^0.0.1",
-    "@types/uuid": "^7.0.3",
-    "@types/zipcelx": "^1.5.0",
-    "antd": "^4.5.2",
+    "antd": "^4.6.1",
     "cookie": "^0.4.1",
     "crc": "^3.8.0",
     "emoji-mart": "^3.0.0",
     "express": "^4.17.1",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.24.0",
-    "next": "^9.5.1",
+    "next": "^9.5.2",
     "next-absolute-url": "^1.2.2",
+    "next-auth": "^3.1.0",
     "protobufjs": "^6.9.0",
     "rc-resize-observer": "^0.2.1",
     "react": "16.13.1",
@@ -41,17 +32,26 @@
     "react-dom": "16.13.1",
     "react-resize-detector": "^5.0.6",
     "react-window": "^1.8.5",
-    "recoil": "^0.0.10",
     "swr": "^0.3.0",
     "uuid": "^8.0.0",
     "zipcelx": "^1.6.2"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.4.1",
+    "@prisma/cli": "^2.5.1",
+    "@types/next-auth": "^3.1.1",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "commander": "^5.1.0",
     "prettier": "^2.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@types/cookie": "^0.4.0",
+    "@types/crc": "^3.4.0",
+    "@types/emoji-mart": "^2.11.3",
+    "@types/lodash.memoize": "^4.1.6",
+    "@types/react-beautiful-dnd": "^12.1.2",
+    "@types/react-resize-detector": "^4.2.0",
+    "@types/react-window": "^1.8.2",
+    "@types/uuid": "^7.0.3",
+    "@types/zipcelx": "^1.5.0"
   }
 }
