--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@ant-design/icons": "^4.2.2",
     "@prisma/client": "^2.5.1",
     "@slack/web-api": "^5.8.0",
-    "antd": "^4.6.1",
+    "antd": "^4.6.2",
     "cookie": "^0.4.1",
     "crc": "^3.8.0",
     "emoji-mart": "^3.0.0",
@@ -38,9 +38,18 @@
   },
   "devDependencies": {
     "@prisma/cli": "^2.5.1",
+    "@types/cookie": "^0.4.0",
+    "@types/crc": "^3.4.0",
+    "@types/emoji-mart": "^2.11.3",
+    "@types/lodash.memoize": "^4.1.6",
     "@types/next-auth": "^3.1.1",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
+    "@types/react-beautiful-dnd": "^12.1.2",
+    "@types/react-resize-detector": "^4.2.0",
+    "@types/react-window": "^1.8.2",
+    "@types/uuid": "^7.0.3",
+    "@types/zipcelx": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "commander": "^5.1.0",
@@ -49,15 +58,6 @@
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.0.5",
-    "typescript": "^3.8.3",
-    "@types/cookie": "^0.4.0",
-    "@types/crc": "^3.4.0",
-    "@types/emoji-mart": "^2.11.3",
-    "@types/lodash.memoize": "^4.1.6",
-    "@types/react-beautiful-dnd": "^12.1.2",
-    "@types/react-resize-detector": "^4.2.0",
-    "@types/react-window": "^1.8.2",
-    "@types/uuid": "^7.0.3",
-    "@types/zipcelx": "^1.5.0"
+    "typescript": "^3.8.3"
   }
 }
