--- a/package.json
+++ b/package.json
@@ -3,41 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn migrate && node server.js",
+    "dev": "next dev -p 51180",
     "build": "next build",
-    "start": "yarn migrate && NODE_ENV=production node server.js",
-    "migrate": "prisma migrate up --experimental --create-db",
+    "start": "prisma db push --preview-feature && NODE_ENV=production next start",
     "proto": "rm -f proto/index.js proto/index.d.ts && yarn pbjs -t static-module -w commonjs -o proto/index.js proto/* --es6 && yarn pbts -o proto/index.d.ts proto/index.js",
     "postinstall": "prisma generate && yarn proto"
   },
   "dependencies": {
-    "@ant-design/charts": "^0.9.10",
-    "@ant-design/icons": "^4.2.2",
-    "@prisma/client": "^2.5.1",
+    "@ant-design/charts": "^1.0.13",
+    "@ant-design/icons": "^4.3.0",
+    "@prisma/client": "^2.13.1",
     "@slack/web-api": "^5.8.0",
-    "antd": "^4.6.2",
+    "antd": "^4.9.4",
     "cookie": "^0.4.1",
     "crc": "^3.8.0",
     "emoji-mart": "^3.0.0",
     "express": "^4.17.1",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.24.0",
-    "next": "^9.5.2",
+    "next": "^10.0.3",
     "next-absolute-url": "^1.2.2",
     "next-auth": "^3.1.0",
-    "protobufjs": "^6.9.0",
-    "rc-resize-observer": "^0.2.1",
+    "protobufjs": "^6.10.2",
+    "rc-resize-observer": "^0.3.0",
     "react": "16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
     "react-resize-detector": "^5.0.6",
     "react-window": "^1.8.5",
-    "swr": "^0.3.0",
+    "swr": "^0.3.11",
     "uuid": "^8.0.0",
     "zipcelx": "^1.6.2"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.5.1",
+    "@prisma/cli": "^2.13.1",
     "@types/cookie": "^0.4.0",
     "@types/crc": "^3.4.0",
     "@types/emoji-mart": "^2.11.3",
