--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,5 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-/firmware/*
-!/firmware/.gitkeep
-/prisma/contactless.db
-/server.cert
 
-/proto/*
-!/proto/*.proto
+.vercel
