--- a/package.json
+++ b/package.json
@@ -3,60 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 51180",
-    "build": "next build",
-    "start": "prisma db push --preview-feature && NODE_ENV=production next start",
-    "proto": "rm -f proto/index.js proto/index.d.ts && yarn pbjs -t static-module -w commonjs -o proto/index.js proto/* --es6 && yarn pbts -o proto/index.d.ts proto/index.js",
-    "postinstall": "prisma generate && yarn proto"
+    "dev": "next dev",
+    "build": "next build"
   },
   "dependencies": {
-    "@ant-design/charts": "^1.0.13",
-    "@ant-design/icons": "^4.3.0",
-    "@prisma/client": "^2.13.1",
-    "@slack/web-api": "^5.8.0",
-    "antd": "^4.9.4",
-    "cookie": "^0.4.1",
-    "crc": "^3.8.0",
-    "emoji-mart": "^3.0.0",
-    "express": "^4.17.1",
-    "lodash.memoize": "^4.1.2",
-    "moment": "^2.24.0",
     "next": "^10.0.3",
-    "next-absolute-url": "^1.2.2",
-    "next-auth": "^3.1.0",
-    "protobufjs": "^6.10.2",
-    "rc-resize-observer": "^0.3.0",
-    "react": "16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "16.13.1",
-    "react-resize-detector": "^5.0.6",
-    "react-window": "^1.8.5",
-    "swr": "^0.3.11",
-    "uuid": "^8.0.0",
-    "zipcelx": "^1.6.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.13.1",
-    "@types/cookie": "^0.4.0",
-    "@types/crc": "^3.4.0",
-    "@types/emoji-mart": "^2.11.3",
-    "@types/lodash.memoize": "^4.1.6",
-    "@types/next-auth": "^3.1.1",
-    "@types/node": "^13.13.2",
-    "@types/react": "^16.9.34",
-    "@types/react-beautiful-dnd": "^12.1.2",
-    "@types/react-resize-detector": "^4.2.0",
-    "@types/react-window": "^1.8.2",
-    "@types/uuid": "^7.0.3",
-    "@types/zipcelx": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
-    "commander": "^5.1.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "@types/react": "^17.0.14",
     "prettier": "^2.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "vercel": "^23.0.1"
   }
 }
