--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.5.1",
     "@graphql-codegen/typescript-operations": "^2.4.2",
     "graphql": "^16.5.0",
-    "graphql-codegen": "^0.4.0",
     "graphql-request": "^4.3.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
