--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.6",
     "@types/react": "^18.0.9",
+    "eslint": "^8.17.0",
+    "eslint-config-next": "12.1.6",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
-    "vercel": "^24.2.4"
+    "vercel": "^25.1.0"
   }
 }
