--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "graphql-request": "^4.3.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "use-long-press": "^2.0.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.6",
